fix(spacing): final spacing fixes

--- a/src/components/markdown/markdown.scss
+++ b/src/components/markdown/markdown.scss
@@ -63,6 +63,9 @@
   margin-top: 1.125rem;
 }
 
+.page-h3#what’s-included {
+  margin-bottom: rem(24px);
+}
 //----------------------------
 // h4
 //----------------------------
@@ -157,7 +160,7 @@
 .page-ul,
 .page-ol {
   @include typescale('epsilon');
-  margin: rem(24px) 0 $spacing-lg $spacing-lg;
+  margin: 0 0 rem(24px) $spacing-lg;
   line-height: 1.5;
   position: relative;
 }
